--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html>
-<head>
-  <base href="https://raw.githubusercontent.com/username/repository/main/">
+<html><head><base href="https://raw.githubusercontent.com/username/repository/main/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/jpg" href="/tempero da vida fit logo nova.jpg">
@@ -245,12 +243,6 @@
     }
 
     @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
-      }
-
       .hero h1 {
         font-size: 2rem;
       }
@@ -267,43 +259,8 @@
         height: 300px;
       }
     }
-
-    @media (max-width: 480px) {
-      header {
-        padding: 1rem 2%;
-      }
-
-      .cta-button {
-        padding: 10px 20px;
-      }
-
-      .hero h1 {
-        font-size: 1.5rem;
-      }
-      
-      .hero h2 {
-        font-size: 1rem;
-      }
-
-      .products-grid {
-        padding: 1rem 2%;
-      }
-
-      .product-card img {
-        width: 150px;
-        height: 150px;
-      }
-
-      .carousel-item img {
-        height: 200px;
-      }
-
-      footer {
-        padding: 1rem 2%;
-      }
-    }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
