--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
         height: 300px;
       }
     }
+    
+    .premium {
+      color: var(--primary-color);
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 2px rgba(0,166,81,0.2);
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -270,7 +278,7 @@
   </header>
   <div class="main-content">
     <section class="hero">
-      <h1>Temperos Premium Para Sua Cozinha Saudável</h1>
+      <h1>Temperos <span class="premium">Premium</span> Para Sua Cozinha Saudável</h1>
       <h2 class="brand-subtitle">Tempero pronto com o melhor sal (+35 minerais), ingredientes orgânicos (cúrcuma e gengibre) e a melhor páprica do mundo (de La Vera)</h2>
     </section>
     <section class="products-grid">
