ajuste caminho imagens

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html><head><base href="https://raw.githubusercontent.com/ismaeleduarte/temperodavidafit/main/">
+<html>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/jpg" href="/tempero da vida fit logo nova.jpg">
+  <link rel="icon" type="image/jpg" href="tempero da vida fit logo nova.jpg">
   <title>Tempero da Vidafit - Temperos Premium</title>
   <style>
     :root {
@@ -268,12 +269,12 @@
       text-shadow: 1px 1px 2px rgba(0,166,81,0.2);
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <header>
-    <img src="/tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="logo">
+    <img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="logo">
     <a href="https://wa.me/5541992111975" class="cta-button">Compre Já</a>
   </header>
   <div class="main-content">
@@ -283,28 +284,28 @@
     </section>
     <section class="products-grid">
       <div class="product-card">
-        <img src="/lemmom pepper emb.jpeg" alt="Lemon Pepper">
+        <img src="lemmom pepper emb.jpeg" alt="Lemon Pepper">
         <h3>Lemon Pepper</h3>
         <p>Blend perfeito de limão e pimenta para seus pratos</p>
         <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
       </div>
       
       <div class="product-card">
-        <img src="/tradicional emb.jpeg" alt="Tradicional">
+        <img src="tradicional emb.jpeg" alt="Tradicional">
         <h3>Tradicional</h3>
         <p>O clássico tempero para seu dia a dia</p>
         <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
       </div>
 
       <div class="product-card">
-        <img src="/ervas finas emb.jpeg" alt="Ervas Finas">
+        <img src="ervas finas emb.jpeg" alt="Ervas Finas">
         <h3>Ervas Finas</h3>
         <p>Mix sofisticado de ervas aromáticas</p>
         <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
       </div>
 
       <div class="product-card">
-        <img src="/praprica defumada emb.jpeg" alt="Páprica Defumada">
+        <img src="praprica defumada emb.jpeg" alt="Páprica Defumada">
         <h3>Páprica Defumada</h3>
         <p>Sabor defumado intenso para suas receitas</p>
         <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
@@ -359,28 +360,28 @@
       <div class="carousel product-carousel">
         <div class="carousel-inner">
           <div class="carousel-item">
-            <img src="/ervas finas.jpeg" alt="Ervas Finas">
+            <img src="ervas finas.jpeg" alt="Ervas Finas">
             <div class="carousel-caption">
               <h3>Ervas Finas</h3>
               <p>Mix sofisticado de ervas aromáticas</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/Lemmom pepper.jpeg" alt="Lemon Pepper">
+            <img src="Lemmom pepper.jpeg" alt="Lemon Pepper">
             <div class="carousel-caption">
               <h3>Lemon Pepper</h3>
               <p>Blend perfeito de limão e pimenta</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/paprica defumada.jpeg" alt="Páprica Defumada">
+            <img src="paprica defumada.jpeg" alt="Páprica Defumada">
             <div class="carousel-caption">
               <h3>Páprica Defumada</h3>
               <p>Sabor defumado intenso</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/tradicional.jpeg" alt="Tradicional">
+            <img src="tradicional.jpeg" alt="Tradicional">
             <div class="carousel-caption">
               <h3>Tradicional</h3>
               <p>O clássico tempero para seu dia a dia</p>
@@ -400,7 +401,7 @@
         <a href="https://wa.me/5541992111975" target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="mailto:contato@temperodavida.fit"><i class="far fa-envelope"></i></a>
       </div>
-      <img src="/tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="footer-logo">
+      <img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="footer-logo">
       <p>&#xa9; 2024 Vidafit. Todos os direitos reservados.</p>
     </footer>
   </div>
