clicar logo home

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -274,7 +275,7 @@
 </head>
 <body>
   <header>
-    <img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="logo">
+    <a href="/"><img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="logo"></a>
     <a href="https://wa.me/5541992111975" class="cta-button">Compre Já</a>
   </header>
   <div class="main-content">
