--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <body>
   <header>
     <a href="/"><img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="logo"></a>
-    <a href="https://wa.me/5541992111975" class="cta-button">Compre Já</a>
+    <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." class="cta-button">Compre Já</a>
   </header>
   <div class="main-content">
     <section class="hero">
@@ -288,28 +288,28 @@
         <img src="lemmom pepper emb.jpeg" alt="Lemon Pepper">
         <h3>Lemon Pepper</h3>
         <p>Blend perfeito de limão e pimenta para seus pratos</p>
-        <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
+        <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." class="cta-button">Saiba Mais</a>
       </div>
       
       <div class="product-card">
         <img src="tradicional emb.jpeg" alt="Tradicional">
         <h3>Tradicional</h3>
         <p>O clássico tempero para seu dia a dia</p>
-        <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
+        <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." class="cta-button">Saiba Mais</a>
       </div>
 
       <div class="product-card">
         <img src="ervas finas emb.jpeg" alt="Ervas Finas">
         <h3>Ervas Finas</h3>
         <p>Mix sofisticado de ervas aromáticas</p>
-        <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
+        <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." class="cta-button">Saiba Mais</a>
       </div>
 
       <div class="product-card">
         <img src="praprica defumada emb.jpeg" alt="Páprica Defumada">
         <h3>Páprica Defumada</h3>
         <p>Sabor defumado intenso para suas receitas</p>
-        <a href="https://wa.me/5541992111975" class="cta-button">Saiba Mais</a>
+        <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." class="cta-button">Saiba Mais</a>
       </div>
     </section>
     <section class="recipe-gallery">
@@ -394,12 +394,12 @@
           <button class="carousel-button next-button-products">&gt;</button>
         </div>
       </div>
-      <a href="https://wa.me/5541992111975" class="cta-button">Peça uma Receita</a>
+      <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e gostaria de receitas." class="cta-button">Peça uma Receita</a>
     </section>
     <footer>
       <div class="social-icons">
         <a href="https://www.instagram.com/temperodavidafit/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://wa.me/5541992111975" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/555541992111975?text=Olá! Vim pelo site e quero comprar temperos." target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="mailto:contato@temperodavida.fit"><i class="far fa-envelope"></i></a>
       </div>
       <img src="tempero da vida fit logo nova.jpg" alt="Vidafit Logo" class="footer-logo">
