--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Descubra temperos prontos premium para sua cozinha saudável. Nossos produtos incluem o melhor sal com mais de 35 minerais, ingredientes orgânicos como cúrcuma e gengibre, e a melhor páprica de La Vera.">
+  <meta name="keywords" content="temperos premium, cozinha saudável, ingredientes orgânicos, cúrcuma, gengibre, páprica de La Vera, temperos prontos, especiarias gourmet">
   <link rel="icon" type="image/jpg" href="tempero da vida fit logo nova.jpg">
   <title>Tempero da Vidafit - Temperos Premium</title>
   <style>
