--- a/index.html
+++ b/index.html
@@ -356,6 +356,22 @@
         </div>
       </div>
     </section>
+<section class="testimonials">
+  <h2>O que nossos clientes dizem</h2>
+  <div class="testimonial">
+    <p>"Os temperos da Vidafit transformaram minha cozinha! Os sabores são incríveis e os ingredientes são de alta qualidade. Recomendo a todos!"</p>
+    <h3>- Gabriel, de Curitiba-PR</h3>
+  </div>
+  <div class="testimonial">
+    <p>"A páprica defumada é a melhor que já experimentei. Dá um toque especial às minhas receitas de churrasco. Vidafit é sinônimo de qualidade."</p>
+    <h3>- Ismael, de Curitiba-PR</h3>
+  </div>
+  <div class="testimonial">
+    <p>"Adoro os temperos orgânicos da Vidafit. Eles são perfeitos para uma alimentação saudável e saborosa. Não vivo mais sem eles."</p>
+    <h3>- Gabriela, de Curitiba-PR</h3>
+  </div>
+</section>
+
     <section class="cta">
       <h2>Ingredientes naturais selecionados para realçar o sabor de suas receitas</h2>
       <h2>Descubra o Sabor Natural</h2>
