--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
         </div>
       </div>
     </section>
-<section class="testimonials">
-  <h2>O que nossos clientes dizem</h2>
-  <div class="testimonial">
-    <p>"Os temperos da Vidafit transformaram minha cozinha! Os sabores são incríveis e os ingredientes são de alta qualidade. Recomendo a todos!"</p>
-    <h3>- Gabriel, de Curitiba-PR</h3>
+<section class="testimonials" style="padding: 4rem 5%; background: #f9f9f9; text-align: center;">
+  <h2 style="color: var(--primary-color); font-size: 2rem; margin-bottom: 2rem;">O que nossos clientes dizem</h2>
+  <div class="testimonial" style="margin: 1rem auto; padding: 1rem; border-radius: 10px; box-shadow: 0 3px 15px rgba(0,0,0,0.1); background: white; max-width: 90%;">
+    <p style="font-style: italic; color: var(--text-gray);">"Os temperos da Vidafit transformaram minha cozinha! Os sabores são incríveis e os ingredientes são de alta qualidade. Recomendo a todos!"</p>
+    <h3 style="margin-top: 1rem; color: var(--black); font-weight: 600;">- Gabriel, de Curitiba-PR</h3>
   </div>
-  <div class="testimonial">
-    <p>"A páprica defumada é a melhor que já experimentei. Dá um toque especial às minhas receitas de churrasco. Vidafit é sinônimo de qualidade."</p>
-    <h3>- Ismael, de Curitiba-PR</h3>
+  <div class="testimonial" style="margin: 1rem auto; padding: 1rem; border-radius: 10px; box-shadow: 0 3px 15px rgba(0,0,0,0.1); background: white; max-width: 90%;">
+    <p style="font-style: italic; color: var(--text-gray);">"A páprica defumada é a melhor que já experimentei. Dá um toque especial às minhas receitas de churrasco. Vidafit é sinônimo de qualidade."</p>
+    <h3 style="margin-top: 1rem; color: var(--black); font-weight: 600;">- Ismael, de Curitiba-PR</h3>
   </div>
-  <div class="testimonial">
-    <p>"Adoro os temperos orgânicos da Vidafit. Eles são perfeitos para uma alimentação saudável e saborosa. Não vivo mais sem eles."</p>
-    <h3>- Gabriela, de Curitiba-PR</h3>
+  <div class="testimonial" style="margin: 1rem auto; padding: 1rem; border-radius: 10px; box-shadow: 0 3px 15px rgba(0,0,0,0.1); background: white; max-width: 90%;">
+    <p style="font-style: italic; color: var(--text-gray);">"Adoro os temperos orgânicos da Vidafit. Eles são perfeitos para uma alimentação saudável e saborosa. Não vivo mais sem eles."</p>
+    <h3 style="margin-top: 1rem; color: var(--black); font-weight: 600;">- Gabriela, de Curitiba-PR</h3>
   </div>
 </section>
 
